map info overflow fix

--- a/main.css
+++ b/main.css
@@ -168,12 +168,8 @@ html {
 
 .inhalt {
 	--inhaltPadding: 1em;
-
 	position: relative;
 	float: left;
-	/* height: 100%; */
-	height: auto;
-	width: 100%;
 	z-index: 10;
 	overflow: hidden;
 	padding: var(--inhaltPadding);
@@ -203,13 +199,15 @@ html {
 	position: absolute;
 	left: var(--inhaltPadding);
 	right: var(--inhaltPadding);
-	overflow: hidden;
+	top: var(--inhaltPadding);
+	bottom: var(--inhaltPadding);
+
+	/* inset: var(--inhaltPadding); */
 	z-index: 10;
 
 	/* width: 50%; only for debugging */
 	width: 35%;
-	/* height: 100%; */
-	/* height: auto; */
+	height: auto;
 	padding: 0.8em;
 
 	/* make div click through */
@@ -227,9 +225,7 @@ html {
 	opacity: 0.8;
 	padding: 20px;
 
-	width: 100%;
-	/* height: 100%; */
-	/* height: auto; */
+	height: 100%;
 }
 
 #map {
